# skoffroad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTROLS.md  Cargo.toml  MVP_SCOPE.md  PRD_v3.1.md  PRD_v3.md  README.md  Trunk.toml  cargo-check-latest.txt  index.html  robots.txt  smoketest.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: sk_ad_sdk.js  touch-controls.css  touch-controls.js
assets/brand_packs/: README.md  _house.json  example_brand.json
assets/fonts/: FONTS.md
assets/materials/: MATERIALS.md
assets/shaders/: triplanar_terrain.wgsl
assets/trails/: demo_loop.gpx  manifest.json
assets/vehicles/: offroad_truck.vehicle.json
assets/vehicles/configs/: ford_bronco.json
docs/: MULTIPLAYER.md  PARKING_LOT.md  USER_VEHICLES.md  contribution_guidelines.md  terrain_material.md  terrain_presets.md
docs/business/: AD_SDK_INTEGRATION.md  BILLBOARD_SCATTER_SPEC.md  CLOUDFLARE_BOT_POLICY.md  DEPLOY_PARTNERS.md  MONETIZATION_OVERVIEW.md  ONEPAGER.md  OUTREACH.md  P0_APPLICATIONS.md  PORTAL_SUBMISSIONS.md  TRAIL_PASS_DESIGN.md
docs/shaders/: terrain_material.md
legacy/: Dockerfile  Rust-Based--SandK-offroad-plan.md  build.rs  clippy.toml  config.ron  rust-toolchain.toml  rustfmt.toml
legacy/assets/audio/: engine.audio.json
legacy/assets/shaders/: pbr_fragment.wgsl  pbr_raytracing.wgsl  terrain.wgsl  terrain_material.wgsl
legacy/assets/vehicles/: jeep.json  sample_truck.vehicle.json
legacy/benches/: vehicle_physics.rs
legacy/config/: default.toml
legacy/docs/: api_structure.md  architecture.md  asset_management.md  coding_standards.md  development_workflow.md  game_architecture.md  graphics.md
legacy/docs/api/: terrain_material_api.md
legacy/examples/: terrain_presets.rs
legacy/scripts/: Cargo.toml  dev.sh  generate_terrain_textures.rs  prd.txt  setup.sh
legacy/scripts/hooks/: pre-commit
legacy/src/: test_config.rs  test_data.rs  test_helpers.rs
legacy/src/assets/: tests.rs  validation.rs
legacy/src/audio/: engine_audio.rs
legacy/src/backend/: config.rs  mod.rs  models.rs  routes.rs
legacy/src/core/: config.rs  env.rs
legacy/src/debug/: mod.rs
legacy/src/game/: constants.rs  debug.rs  mod.rs  states.rs  tests.rs
legacy/src/physics/: advanced_dynamics.rs  snow_handling.rs  terrain_interaction.rs  terrain_properties.rs  tire_temperature.rs  vehicle_physics_manager.rs  wheel.rs
legacy/src/rendering/: light_manager.rs  light_plugin.rs  material_manager.rs  material_plugin.rs  mod.rs  ray_tracing.rs  ray_tracing_settings.rs
legacy/src/terrain/: buffer_pool.rs  chunk.rs  culling.rs  deformation.rs  feature_types.rs  terrain_features.rs  tests.rs
legacy/src/test_utils/: mod.rs
legacy/src/ui/: mod.rs
legacy/src/utils/: mod.rs
legacy/tests/: README.md  config.rs  mod.rs  performance_tests.rs
legacy/tests/common/: mod.rs
next/: ASSET_IMPORT_RESEARCH.md  Cargo.toml  README.md  smoketest.sh
next/assets/: manifest.json
next/src/: accessibility.rs  achievements.rs  ai_driver.rs  airtime.rs  arrow.rs  ascii_logo.rs  asset_attribution.rs  asset_browser.rs  asset_manifest.rs  audio.rs  benchmark.rs  biome_desert.rs  bloom_pp.rs  boats.rs  boost.rs  breadcrumbs.rs  buildings.rs  camera.rs  camera_modes.rs  challenges.rs  changelog.rs  climb_assist.rs  collectibles.rs  compass_hud.rs  config.rs  credits.rs  damage.rs  decals.rs  demolition.rs  diff_lock.rs  distant_thunder.rs  drift_meter.rs  drive_mode.rs  drone.rs  engine_bay.rs  engine_torque.rs  exhaust_smoke.rs  fast_travel_menu.rs  fireworks.rs  fish.rs  (+89 more)
next/tests/: drive_test.rs
scripts/: attach_robots_routes.sh  fetch_fonts.sh  fetch_materials.sh  generate_test_textures.rs  task-complexity-report.json
scripts/cf-robots-worker/: README.md  wrangler.toml
scripts/cf-robots-worker/src/: worker.js
src/: achievements.rs  ad_sdk_bridge.rs  ai_driver.rs  ai_path.rs  airtime.rs  arrow.rs  asset_attribution.rs  assists.rs  audio.rs  banners.rs  benchmark.rs  billboards.rs  biome_canyon.rs  birds_flock.rs  bloom_pp.rs  boost.rs  brand_pack.rs  buddy_recovery.rs  camera.rs  camera_modes.rs  campfires.rs  career.rs  changelog.rs  chassis_underglow.rs  chrome_polish.rs  collectibles.rs  combo.rs  compass.rs  confetti.rs  config.rs  course.rs  crash_audio.rs  credits.rs  custom_map_loader.rs  daily.rs  damage.rs  damage_visual.rs  decals.rs  demo_mode.rs  drift_meter.rs  (+112 more)
src/assets/: mod.rs
src/audio/: mod.rs
src/core/: mod.rs
src/game/: state.rs  ui.rs
src/game/assets/: mod.rs  tests.rs
src/game/audio/: cb_chatter.rs  cb_debug.rs  cb_filter.rs  emergency_event.rs  environment_audio.rs  mod.rs  radio_effects.rs  spatial_audio.rs  terrain_interference.rs  voice_chat.rs
src/game/components/: player.rs  vehicle.rs  vehicle_config.rs
src/game/plugins/: asset_loader.rs  asset_server.rs  assets.rs  audio_source.rs  binding_resource.rs  buffer.rs  buffer_descriptor.rs  buffer_usages.rs  buffer_vec.rs  camera_plugin.rs  color.rs  compression.rs  debug.rs  debug_info.rs  diagnostics.rs  effects.rs  gizmos.rs  handle.rs  input.rs  input_plugin.rs  input_state.rs  load_op.rs  mod.rs  mouse_motion.rs  operations.rs  pbr_bundle.rs  performance_display_plugin.rs  physics_plugin.rs  plugin_group_builder.rs  post_process_settings.rs  render_graph.rs  render_pass_color_attachment.rs  render_pass_descriptor.rs  render_queue.rs  standard_material.rs  state.rs  terrain.rs  terrain_plugin.rs  tone_mapping.rs  ui.rs  (+5 more)
src/game/systems/: pause.rs  race_setup.rs
src/game/terrain/: collision.rs  debug_preview.rs  erosion.rs  heightmap.rs  materials.rs  mod.rs  modification.rs
src/game/ui/: cb_radio_ui.rs  ui_state.rs
src/physics/: mod.rs
src/terrain/: generation.rs  generator.rs  material.rs  mesh.rs  mod.rs
src/weather/: mod.rs
tests/: drive_test.rs
tests/game/: weather_tests.rs
tests/mobile/: mobile-smoke.spec.ts  package-lock.json  package.json  playwright.config.ts
web/partners/: index.html
(+117 files in other folders)
