[package]
name = "sandk-offroad"
version = "0.1.0"
edition = "2021"
description = "An advanced off-road vehicle simulation game with realistic physics and graphics"
authors = ["SandK Development Team"]
repository = "https://github.com/sandk/offroad"
license = "MIT"

[workspace]
members = ["scripts"]

[dependencies]
# Core game engine
bevy = { version = "0.12", features = ["bevy_pbr", "bevy_render", "bevy_asset", "bevy_core_pipeline", "dynamic_linking", "wayland"] }
bevy_egui = "0.24"
bevy_kira_audio = "0.18"

# Graphics and shaders
wgpu = "0.17"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"

# Physics
bevy_rapier3d = "0.23"
nalgebra = "0.32"

# Asset handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

# Networking
tokio = { version = "1.32", features = ["full"] }
warp = "0.3"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Noise
noise = "0.8"

# Voice chat and audio processing
cpal = "0.15"
ringbuf = "0.4"
dasp_signal = "0.11"
dasp_interpolate = "0.11"
dasp_window = "0.11"
dasp_ring_buffer = "0.11"
fastrand = "2.0"
rand = "0.8"

[dev-dependencies]
# Development tools
bevy-inspector-egui = "0.22"
bevy_mod_debugdump = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
mockall = "0.11"
test-case = "3.3"
rstest = "0.18"
pretty_assertions = "1.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[features]
default = ["graphics-high"]
graphics-low = []
graphics-medium = ["graphics-low"]
graphics-high = ["graphics-medium", "post-process-effects"]
post-process-effects = []

# Enable this feature for development with fast compilation
dev = ["bevy/dynamic_linking"]

# Enable this feature for shader hot-reloading
shader-hot-reload = []

[[bench]]
name = "performance_tests"
harness = false 
