[workspace]

[package]
name = "skoffroad"
version = "0.11.0"
edition = "2021"
default-run = "skoffroad"
license = "GPL-3.0-or-later"

[features]
default = []
dev = ["bevy/dynamic_linking", "dep:bevy-inspector-egui"]

[lib]
name = "skoffroad"
path = "src/lib.rs"
# Default crate-type ("rlib") is what `cargo run` and the `sim` /
# `skoffroad` bins link against. We do NOT add "cdylib" here because
# Trunk's pipeline builds the `[[bin]]` target directly when the index
# uses `data-bin`, and adding cdylib alongside a same-named bin makes
# `cargo build --target wasm32` emit two artifacts named "skoffroad"
# which Trunk can't disambiguate.

[[bin]]
name = "skoffroad"
path = "src/main.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
bevy = { version = "0.18.1", default-features = true, features = ["jpeg"] }
avian3d = { version = "0.6.1", features = ["collider-from-mesh"] }
bevy_hanabi = { version = "0.18.0" }
noise = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_kira_audio = "0.25.0"

# WASM-only deps: localStorage access, panic forwarding to the JS console,
# and the wasm-bindgen runtime. Native builds skip all of this.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
console_error_panic_hook = "0.1"

# Trunk drives the WASM build with these flags. Tweak via .cargo/config.toml
# or trunk's own --release flag.

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
