[workspace]

[package]
name = "sandk-offroad-next"
version = "0.1.0"
edition = "2021"
default-run = "sandk-offroad-next"

[features]
default = []
dev = ["bevy/dynamic_linking", "dep:bevy-inspector-egui"]

[lib]
name = "sandk_offroad_next"
path = "src/lib.rs"

[[bin]]
name = "sandk-offroad-next"
path = "src/main.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
bevy = { version = "0.18.1", default-features = true }
avian3d = { version = "0.6.1", features = ["collider-from-mesh"] }
bevy_hanabi = { version = "0.18.0" }
noise = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy-inspector-egui = { version = "0.36.0", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
